# md_To_Html_To_World

./: README.md  build_app.py  build_macos.sh  build_windows.bat  config_example.yaml  export_config.py  md转化为world文档项目功能列表.md  product_requirements.md  pyproject.toml  run.py  simple_build.py  test.docx  test_converted.docx  world_md.spec  重构建议.md  重构总结.md
html/: sample.html  test.html  test_indent.html  test_number_list.html  test_spacing.html  test_strong.html  test_table.html  training_manual.html  产品使用手册.html  产品目录.html  双方权利义务对照表_v1.0.html  小明留学计划书初稿.html  约旅平台项目资助申请文档_整合版.html  约旅平台项目资助申请文档_整合版v1.0.1.html  约旅平台项目资助申请文档_整合版v1.1.html  项目资助合作方案_v1.0.html  香港ITF资助申请计划书草稿_AI动漫引擎.html
md/: sample.md  test_number_list.md  test_strong.md  test_table.md  training_manual.md  产品使用手册.md  产品目录.docx  产品目录.md  双方权利义务对照表_v1.0.md  小明留学计划书初稿.md  约旅平台项目资助申请文档_整合版.md  约旅平台项目资助申请文档_整合版v1.0.1.md  约旅平台项目资助申请文档_整合版v1.1.md  项目资助合作方案_v1.0.md  香港ITF资助申请计划书草稿_AI动漫引擎.md
src/: config.py  config_example.yaml  converter.py  main.py  test.docx  test.md  test_conversion.py
vscode-extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  MIGRATION_GUIDE.md  README.docx  README.html  README.md  REFACTOR_PLAN.md  excel-config.yaml  markdown-to-word-0.0.10.vsix  markdown-to-word-0.0.11.vsix  markdown-to-word-0.0.12.vsix  markdown-to-word-0.0.13.vsix  markdown-to-word-0.0.14.vsix  markdown-to-word-0.0.15.vsix  markdown-to-word-0.0.16.vsix  markdown-to-word-0.1.1.vsix  markdown-to-word-0.1.2.vsix  markdown-to-word-0.1.3.vsix  markdown-to-word-0.1.4.vsix  markdown-to-word-0.1.5.vsix  package-lock.json  (+15 more)
(+465 files in other folders)
